Add nuget cleaner;

--- a/ChakraUtilitiesSharp.csproj
+++ b/ChakraUtilitiesSharp.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishAOT>true</PublishAOT>
-    <RuntimeIdnetifier>win-arm64</RuntimeIdnetifier>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
 </Project>
